# drift

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  drift.1  marketing.md
.github/workflows/: ci.yml
docs/: index.html
src/: classifier.rs  compare.rs  completions.rs  config.rs  daemon.rs  extra.rs  init.rs  insights.rs  main.rs  presets.rs  store.rs  switch.rs  ui.rs  watch.rs
src/focus/: mod.rs
src/report/: mod.rs
src/tracker/: linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: mod.rs
