[package]
name = "drift-tracker"
version = "0.9.0"
edition = "2024"
authors = ["Christian Kbr <christian@lymeagency.com>"]
license = "MIT"
description = "Developer-focused context switch tracker. Quantify your focus loss."
repository = "https://github.com/christiankbr/drift"
homepage = "https://github.com/christiankbr/drift"
keywords = ["productivity", "focus", "context-switch", "tracker", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Misc
dirs = "5.0"
anyhow = "1.0"
colored = "3.0"
serde_json = "1.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true